Add ingredients route
